discussion/kv_engine/125919/125919_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

Keep 30 minutes of history in compaction

(with 1 minute interval)

Change-Id: I0f1b686ff8190d087bba3630b371ca346985a35c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-04-17 08:00:34.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-17 08:26:08.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27553/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27553/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1735/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1092:13: error: too many arguments to function call, expected 6, have 8 [clang-diagnostic-error]
            oldest.time_since_epoch().count(),
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/couchstore/include/libcouchstore/couch_db.h:1205:1: note: "compact" declared here
LIBCOUCHSTORE_API
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/build-kv_engine-clang-tidy/couchstore/include/libcouchstore/visibility.h:15:33: note: expanded from macro "LIBCOUCHSTORE_API"
#      define LIBCOUCHSTORE_API __attribute__((visibility("default")))
                                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1735/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1092:13:
error: too many arguments to function call, expected 6, have 8 [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1735/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23561/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1092:13:
error: too many arguments to function call, expected 6, have 8
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23561/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2208/ : FAILURE

Compile error at [2020-04-17T08:12:56.754Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1092:13:
error: too many arguments to function call, expected 6, have 8
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2208/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3221/ : FAILURE

Compile error at [2020-04-17T08:24:29.389Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1093:26:
error: too many arguments to function ?couchstore_error_t cb::couchstore::compact(Db&, const char*, couchstore_compact_flags, cb::couchstore::CompactFilterCallback, cb::couchstore::CompactRewriteDocInfoCallback, FileOpsInterface*)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3221/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3164/ : FAILURE

Compile error at [2020-04-17T08:22:25.304Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1093:26:
error: too many arguments to function ?couchstore_error_t cb::couchstore::compact(Db&, const char*, couchstore_compact_flags, cb::couchstore::CompactFilterCallback, cb::couchstore::CompactRewriteDocInfoCallback, FileOpsInterface*)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3164/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3148/ : FAILURE

Compile error at [2020-04-17T08:21:51.602Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1093:26:
error: too many arguments to function ?couchstore_error_t cb::couchstore::compact(Db&, const char*, couchstore_compact_flags, cb::couchstore::CompactFilterCallback, cb::couchstore::CompactRewriteDocInfoCallback, FileOpsInterface*)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3148/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11015/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/254/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
